<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">manase221_s_application2</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="msg_request_discpou">REQUEST DISCPOUNTR</string>
<string name="lbl_tuesday">Tuesday</string>
<string name="lbl_book">BOOK</string>
<string name="lbl_7700">7700</string>
<string name="msg_services_offere">SERVICES OFFERED</string>
<string name="lbl_home">home</string>
<string name="lbl_car_model">CAR MODEL</string>
<string name="lbl_34567829">34567829</string>
<string name="lbl_spares">spares  </string>
<string name="lbl_2000">2000</string>
<string name="lbl_wednesday">Wednesday</string>
<string name="lbl_app_navigation">App Navigation</string>
<string name="msg_enter_your_car2">enter your car type</string>
<string name="lbl_air_filter">air filter</string>
<string name="msg_check_inventor">CHECK  INVENTORY</string>
<string name="lbl_payment2">payment</string>
<string name="lbl_engine_oil">engine oil </string>
<string name="lbl_sign_in">sign in.</string>
<string name="msg_select_date_for">select date for your appoin</string>
<string name="msg_name_manase_kip">NAME MANASE KIPRUTO</string>
<string name="msg_not_yet_a_membe2">Not yet a member? </string>
<string name="lbl_exhaust_smoke">exhaust smoke</string>
<string name="msg_spare_parts_sho">spare parts shop</string>
<string name="lbl_pay_now">PAY NOW</string>
<string name="lbl_friday">Friday</string>
<string name="lbl_total_71_000">TOTAL = 71 000</string>
<string name="lbl_booking">booking</string>
<string name="msg_discount_reques">DISCOUNT REQUEST ACCEPTED</string>
<string name="msg_upload_your_ima">upload your image</string>
<string name="msg_enter_your_ema">enter  your email </string>
<string name="lbl_select">SELECT</string>
<string name="msg_ask_for_discoun">ask for discount</string>
<string name="lbl_machanic">machanic =</string>
<string name="msg_payment_success">PAYMENT
SUCCESSFULL</string>
<string name="lbl_enter_your_pin">enter your pin</string>
<string name="msg_already_a_membe2">Already a member? </string>
<string name="lbl_enter_amount">enter amount</string>
<string name="lbl_oil_filter">Oil Filter</string>
<string name="msg_enter_your_car">enter your car number</string>
<string name="lbl_add_cart">add cart</string>
<string name="lbl_forester">:FORESTER</string>
<string name="msg_low_fuel_mileag">low fuel mileage</string>
<string name="msg_spare_parts_now">Spare parts now available</string>
<string name="lbl_job_id">JOB_ ID  :</string>
<string name="lbl_request">REQUEST</string>
<string name="lbl_car_problems3">Car problems</string>
<string name="lbl_car_problems2">CAR PROBLEMS</string>
<string name="lbl_monday">Monday</string>
<string name="msg_offering_a_rang">offering a range of car services
at an affordable prices.

car spare parts also available at 
a discount for the registered customers.</string>
<string name="lbl_800">800</string>
<string name="lbl_book_date">BOOK DATE</string>
<string name="lbl_station">STATION  : </string>
<string name="lbl_locate_the_shop">locate the shop</string>
<string name="lbl_payment">payment </string>
<string name="msg_add_new_custome">ADD NEW CUSTOMER TO THE LIST</string>
<string name="lbl_sevices">sevices</string>
<string name="lbl_welcome">WELCOME</string>
<string name="msg_request_succes">REQUEST  SUCCESSFULL</string>
<string name="msg_check_your_app">"Check your app's UI from the below demo screens of your app."</string>
<string name="lbl_my_fastserv">MY
FASTSERV</string>
<string name="lbl_title">TITLE    :</string>
<string name="lbl_id_number">ID NUMBER:</string>
<string name="lbl_fastserv">Fastserv </string>
<string name="lbl_45_000">45,000</string>
<string name="lbl_1200">1200</string>
<string name="msg_car_model_fores">CAR MODEL:FORESTER</string>
<string name="lbl_enter_password">enter password</string>
<string name="lbl_my_profile">MY PROFILE</string>
<string name="lbl_administrator">Administrator</string>
<string name="msg_affordable_pri">Affordable 
prices</string>
<string name="lbl_mechanic">Mechanic</string>
<string name="lbl_brake_pads">Brake Pads</string>
<string name="lbl_900">900</string>
<string name="lbl_discount">discount</string>
<string name="msg_not_yet_a_membe">Not yet a member? sign up.</string>
<string name="lbl_car_problems">car problems</string>
<string name="msg_car_number_kdg">CAR NUMBER: KDG 102 R</string>
<string name="msg_request_for_new">REQUEST FOR NEW SPARES</string>
<string name="lbl_ac_filter">AC filter</string>
<string name="lbl_mathew_kimani">Mathew Kimani</string>
<string name="lbl_kdg_102_r">KDG 102 R</string>
<string name="msg_login_as_an_adm">LOGIN AS AN ADMIN</string>
<string name="msg_enter_service_n">enter service number</string>
<string name="lbl_total">TOTAL</string>
<string name="lbl_spare_shop">spare shop</string>
<string name="msg_the_quetation">The  Quetation of the car  problem </string>
<string name="msg_engineoverheati">engineoverheating</string>
<string name="lbl_admin_profile">admin profile</string>
<string name="msg_enter_email_us">enter email /username</string>
<string name="lbl_dead_battery">dead battery</string>
<string name="lbl_8600">8600</string>
<string name="lbl_success_booking">success booking</string>
<string name="lbl_login2">login</string>
<string name="lbl_take_it">TAKE IT</string>
<string name="msg_parts_replaceme">parts replacement =</string>
<string name="lbl_sign_up">sign up.</string>
<string name="lbl_sign_up2">SIGN UP</string>
<string name="msg_already_a_membe">Already a member? sign in.</string>
<string name="lbl_sign_up3">Sign up</string>
<string name="lbl_name">NAME </string>
<string name="lbl_pay_mechanics">PAY MECHANICS</string>
<string name="lbl_admin_homepage">admin homepage</string>
<string name="lbl_activities">ACTIVITIES</string>
<string name="msg_customer_regist">CUSTOMER REGISTRATION</string>
<string name="lbl_name2">NAME   :</string>
<string name="lbl_my_profile2">My profile</string>
<string name="lbl_10_discount">10% discount</string>
<string name="lbl_check_payments">CHECK  PAYMENTS </string>
<string name="lbl_prices">prices</string>
<string name="lbl_repairs">Repairs =</string>
<string name="lbl_2022_nov_18">2022 nov 18</string>
<string name="msg_view_appointme">VIEW  APPOINTMENTS</string>
<string name="msg_state_the_car_p">state the car problem</string>
<string name="lbl_success">success</string>
<string name="lbl_rank">RANK  :</string>
<string name="lbl_spark_plugs">spark plugs</string>
<string name="lbl_battery">battery </string>
<string name="lbl_feb_3rd">: FEB 3rd</string>
<string name="lbl_car_number">CAR NUMBER: </string>
<string name="lbl_repaire">REPAIRE</string>
<string name="lbl_thursday">Thursday</string>
<string name="msg_login_as_a_cust">LOGIN AS A CUSTOMER</string>
<string name="lbl_2345">2345</string>
<string name="lbl_login">LOGIN</string>
<string name="msg_schedule_appoin">schedule appointment</string>
<string name="msg_uneven_tyre_wea">uneven tyre wear</string>
<string name="lbl_6000">6000</string>
<string name="lbl_pay">PAY</string>
<string name="lbl_20_000">20,000</string>
<string name="msg_enter_your_numb">enter your number</string>
<string name="msg_date_successful"> DATE SUCCESSFULLY BOOKED</string>
<string name="msg_booking_appoint">booking appointment</string>
<string name="lbl_4500">4500</string>
<string name="msg_remiders_for_ca">remiders for car service and scheduling of appointments now available</string>
<string name="msg_last_appointmen">LAST APPOINTMENT: FEB 3rd</string>
<string name="msg_last_appointmen2">LAST APPOINTMENT</string>
<string name="lbl_disc_request">disc request</string>
<string name="msg_enquire_car_pro">enquire car problems</string>
<string name="lbl_1000">1000</string>
<string name="lbl_saturday">Saturday</string>
<string name="lbl_low_engine_oil"> low engine oil </string>
<string name="lbl_enter_your_name">enter your name</string>
<string name="lbl_manase_kipruto">MANASE KIPRUTO</string>
<string name="msg_book_appointmen">BOOK APPOINTMENT</string>
<string name="msg_please_enter_valid_nu">Please enter valid number</string>
<string name="msg_please_enter_valid_text">Please enter valid text</string>
</resources>
