<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="adminProfileVM" type="com.manasesapplication.app.modules.adminprofile.data.viewmodel.AdminProfileVM"/>
    </data>
    <FrameLayout android:id="@+id/frameAdminprofile"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStylewhite_A700">
        <LinearLayout android:id="@+id/linearColumnvector"
            android:layout_gravity="top|center"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_10pxv"
            android:layout_marginEnd="@dimen/_3pxh"
            android:layout_marginStart="@dimen/_8pxh"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <androidx.appcompat.widget.Toolbar android:gravity="start"
                android:id="@+id/toolbarToolbar"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" app:contentInsetStart="0dp">
                <LinearLayout android:id="@+id/linearICONS"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <ImageView android:id="@+id/imageVector"
                        android:layout_height="@dimen/_17pxh"
                        android:layout_marginBottom="@dimen/_1pxv"
                        android:layout_marginTop="@dimen/_2pxv"
                        android:layout_width="@dimen/_25pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_vector"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_vector"/>
                    <LinearLayout android:id="@+id/linearRowvectorOne"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_288pxh"
                        android:layout_weight="0.73"
                        android:layout_width="0dp" android:orientation="horizontal">
                        <ImageView android:id="@+id/imageVectorOne"
                            android:layout_height="@dimen/_20pxh"
                            android:layout_width="@dimen/_23pxh"
                            android:scaleType="fitXY"
                            android:src="@drawable/img_vector_black_900"
                            tools:ignore="ContentDescription" tools:src="@drawable/img_vector_black_900"/>
                        <ImageView android:id="@+id/imageVectorTwo"
                            android:layout_height="@dimen/_12pxh"
                            android:layout_marginBottom="@dimen/_3pxv"
                            android:layout_marginStart="@dimen/_17pxh"
                            android:layout_marginTop="@dimen/_4pxv"
                            android:layout_width="@dimen/_25pxh"
                            android:scaleType="fitXY"
                            android:src="@drawable/img_vector_black_900_12x25"
                            tools:ignore="ContentDescription" tools:src="@drawable/img_vector_black_900_12x25"/>
                    </LinearLayout>
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowmyfastserv"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_25pxh"
                android:layout_marginStart="@dimen/_25pxh"
                android:layout_marginTop="@dimen/_67pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <LinearLayout android:id="@+id/linearColumnmyfastserv"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2pxv"
                    android:layout_weight="0.81"
                    android:layout_width="0dp" android:orientation="vertical">
                    <TextView android:gravity="start"
                        android:id="@+id/txtMYFASTSERV"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:layout_width="match_parent"
                        android:text="@{adminProfileVM.adminProfileModel.txtMYFASTSERV}"
                        style="@style/txtInterlight40" tools:text="@string/lbl_my_fastserv"/>
                    <TextView android:ellipsize="end"
                        android:gravity="start"
                        android:id="@+id/txtMYPROFILE"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:layout_marginStart="@dimen/_6pxh"
                        android:layout_marginTop="@dimen/_47pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@{adminProfileVM.adminProfileModel.txtMYPROFILE}"
                        style="@style/txtIntersemibold24" tools:text="@string/lbl_my_profile"/>
                </LinearLayout>
                <LinearLayout android:gravity="end"
                    android:id="@+id/linearColumnrectangleone"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_135pxv"
                    android:layout_weight="0.19"
                    android:layout_width="0dp" android:orientation="vertical">
                    <View android:background="@color/black_900"
                        android:id="@+id/viewRectangleOne"
                        android:layout_height="@dimen/_4pxv"
                        android:layout_marginStart="@dimen/_10pxh" android:layout_width="@dimen/_48pxh"/>
                    <View android:background="@color/black_900"
                        android:id="@+id/viewRectangleTwo"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="@dimen/_4pxv"
                        android:layout_marginEnd="@dimen/_1pxh"
                        android:layout_marginTop="@dimen/_8pxv" android:layout_width="@dimen/_60pxh"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:id="@+id/linearRowlanguage"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_25pxh"
                android:layout_marginStart="@dimen/_25pxh"
                android:layout_marginTop="@dimen/_29pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtLanguage"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_weight="0.36"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{adminProfileVM.adminProfileModel.txtLanguage}"
                    style="@style/txtInterlight20" tools:text="@string/lbl_name2"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtMathewKimani"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_70pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.64"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{adminProfileVM.adminProfileModel.txtMathewKimani}"
                    style="@style/txtInterlight20" tools:text="@string/lbl_mathew_kimani"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowidnumber"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_36pxh"
                android:layout_marginStart="@dimen/_36pxh"
                android:layout_marginTop="@dimen/_34pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtIDNUMBER"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_weight="0.55"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{adminProfileVM.adminProfileModel.txtIDNUMBER}"
                    style="@style/txtInterlight20" tools:text="@string/lbl_id_number"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txt34567829"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_36pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.45"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{adminProfileVM.adminProfileModel.txt34567829}"
                    style="@style/txtInterlight20" tools:text="@string/lbl_34567829"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowprice"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_36pxh"
                android:layout_marginStart="@dimen/_36pxh"
                android:layout_marginTop="@dimen/_41pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtPrice"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.47"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{adminProfileVM.adminProfileModel.txtPrice}"
                    style="@style/txtInterlight20" tools:text="@string/lbl_title"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtMechanic"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginStart="@dimen/_69pxh"
                    android:layout_weight="0.53"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{adminProfileVM.adminProfileModel.txtMechanic}"
                    style="@style/txtInterlight20" tools:text="@string/lbl_mechanic"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowlanguageOne"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_36pxh"
                android:layout_marginStart="@dimen/_36pxh"
                android:layout_marginTop="@dimen/_36pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtLanguageOne"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2pxv"
                    android:layout_weight="0.56"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{adminProfileVM.adminProfileModel.txtLanguageOne}"
                    style="@style/txtInterlight20" tools:text="@string/lbl_station"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtLanguageTwo"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_2pxv"
                    android:layout_marginStart="@dimen/_57pxh"
                    android:layout_weight="0.44"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{adminProfileVM.adminProfileModel.txtLanguageTwo}"
                    style="@style/txtInterlight20" tools:text="@string/lbl_fastserv"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowlanguageThree"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_36pxh"
                android:layout_marginStart="@dimen/_36pxh"
                android:layout_marginTop="@dimen/_38pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtLanguageThree"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_weight="0.36"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{adminProfileVM.adminProfileModel.txtLanguageThree}"
                    style="@style/txtInterlight20" tools:text="@string/lbl_rank"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtAdministrator"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_79pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.64"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{adminProfileVM.adminProfileModel.txtAdministrator}"
                    style="@style/txtInterlight20" tools:text="@string/lbl_administrator"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowlanguageFour"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_36pxh"
                android:layout_marginStart="@dimen/_36pxh"
                android:layout_marginTop="@dimen/_33pxv"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtLanguageFour"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5pxv"
                    android:layout_weight="0.65"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{adminProfileVM.adminProfileModel.txtLanguageFour}"
                    style="@style/txtInterlight20" tools:text="@string/lbl_job_id"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtZipcode"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_5pxv"
                    android:layout_marginStart="@dimen/_61pxh"
                    android:layout_weight="0.35"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{adminProfileVM.adminProfileModel.txtZipcode}"
                    style="@style/txtInterlight20" tools:text="@string/lbl_2345"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</layout>
