<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="adminHomepageVM" type="com.manasesapplication.app.modules.adminhomepage.data.viewmodel.AdminHomepageVM"/>
    </data>
    <FrameLayout android:id="@+id/frameAdminhomepage"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStylewhite_A700">
        <LinearLayout android:id="@+id/linearColumnvector"
            android:layout_gravity="top|center"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_10pxv"
            android:layout_marginEnd="@dimen/_3pxh"
            android:layout_marginStart="@dimen/_8pxh"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <androidx.appcompat.widget.Toolbar android:gravity="start"
                android:id="@+id/toolbarToolbar"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" app:contentInsetStart="0dp">
                <LinearLayout android:id="@+id/linearICONS"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <ImageView android:id="@+id/imageVector"
                        android:layout_height="@dimen/_17pxh"
                        android:layout_marginBottom="@dimen/_1pxv"
                        android:layout_marginTop="@dimen/_2pxv"
                        android:layout_width="@dimen/_25pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_vector"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_vector"/>
                    <LinearLayout android:id="@+id/linearRowvectorOne"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_288pxh"
                        android:layout_weight="0.73"
                        android:layout_width="0dp" android:orientation="horizontal">
                        <ImageView android:id="@+id/imageVectorOne"
                            android:layout_height="@dimen/_20pxh"
                            android:layout_width="@dimen/_23pxh"
                            android:scaleType="fitXY"
                            android:src="@drawable/img_vector_black_900"
                            tools:ignore="ContentDescription" tools:src="@drawable/img_vector_black_900"/>
                        <ImageView android:id="@+id/imageVectorTwo"
                            android:layout_height="@dimen/_12pxh"
                            android:layout_marginBottom="@dimen/_3pxv"
                            android:layout_marginStart="@dimen/_17pxh"
                            android:layout_marginTop="@dimen/_4pxv"
                            android:layout_width="@dimen/_25pxh"
                            android:scaleType="fitXY"
                            android:src="@drawable/img_vector_black_900_12x25"
                            tools:ignore="ContentDescription" tools:src="@drawable/img_vector_black_900_12x25"/>
                    </LinearLayout>
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowmyfastserv"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_19pxh"
                android:layout_marginStart="@dimen/_19pxh"
                android:layout_marginTop="@dimen/_67pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearColumnmyfastserv"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2pxv"
                    android:layout_weight="0.81"
                    android:layout_width="0dp" android:orientation="vertical">
                    <TextView android:id="@+id/txtMYFASTSERV"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:layout_width="match_parent"
                        android:text="@{adminHomepageVM.adminHomepageModel.txtMYFASTSERV}"
                        style="@style/txtInterlight40" tools:text="@string/lbl_my_fastserv"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtACTIVITIES"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:layout_marginTop="@dimen/_79pxv"
                        android:layout_width="wrap_content"
                        android:singleLine="true"
                        android:text="@{adminHomepageVM.adminHomepageModel.txtACTIVITIES}"
                        style="@style/txtIntersemibold24" tools:text="@string/lbl_activities"/>
                </LinearLayout>
                <LinearLayout android:gravity="end"
                    android:id="@+id/linearColumnrectangleone"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_167pxv"
                    android:layout_weight="0.19"
                    android:layout_width="0dp" android:orientation="vertical">
                    <View android:background="@color/black_900"
                        android:id="@+id/viewRectangleOne"
                        android:layout_height="@dimen/_4pxv"
                        android:layout_marginStart="@dimen/_10pxh" android:layout_width="@dimen/_48pxh"/>
                    <View android:background="@color/black_900"
                        android:id="@+id/viewRectangleTwo"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="@dimen/_4pxv"
                        android:layout_marginEnd="@dimen/_1pxh"
                        android:layout_marginTop="@dimen/_8pxv" android:layout_width="@dimen/_60pxh"/>
                </LinearLayout>
            </LinearLayout>
            <TextView android:ellipsize="end"
                android:gravity="center_horizontal"
                android:id="@+id/txtADDNEWCUSTOME"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_19pxh"
                android:layout_marginStart="@dimen/_19pxh"
                android:layout_marginTop="@dimen/_55pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{adminHomepageVM.adminHomepageModel.txtADDNEWCUSTOME}"
                style="@style/txtInterlight20" tools:text="@string/msg_add_new_custome"/>
            <TextView android:ellipsize="end" android:gravity="start"
                android:id="@+id/txtLanguage"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_19pxh"
                android:layout_marginStart="@dimen/_19pxh"
                android:layout_marginTop="@dimen/_35pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{adminHomepageVM.adminHomepageModel.txtLanguage}"
                style="@style/txtInterlight20" tools:text="@string/msg_view_appointme"/>
            <TextView android:ellipsize="end" android:gravity="start"
                android:id="@+id/txtREQUESTFORNEW"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_19pxh"
                android:layout_marginStart="@dimen/_19pxh"
                android:layout_marginTop="@dimen/_35pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{adminHomepageVM.adminHomepageModel.txtREQUESTFORNEW}"
                style="@style/txtInterlight20" tools:text="@string/msg_request_for_new"/>
            <TextView android:ellipsize="end" android:gravity="start"
                android:id="@+id/txtPrice"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_19pxh"
                android:layout_marginStart="@dimen/_19pxh"
                android:layout_marginTop="@dimen/_34pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{adminHomepageVM.adminHomepageModel.txtPrice}"
                style="@style/txtInterlight20" tools:text="@string/msg_check_inventor"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtPriceOne"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_19pxh"
                android:layout_marginStart="@dimen/_19pxh"
                android:layout_marginTop="@dimen/_35pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{adminHomepageVM.adminHomepageModel.txtPriceOne}"
                style="@style/txtInterlight20" tools:text="@string/lbl_check_payments"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtPriceTwo"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_19pxh"
                android:layout_marginStart="@dimen/_19pxh"
                android:layout_marginTop="@dimen/_35pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{adminHomepageVM.adminHomepageModel.txtPriceTwo}"
                style="@style/txtInterlight20" tools:text="@string/lbl_pay_mechanics"/>
            <LinearLayout android:id="@+id/linearRowhome"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_19pxh"
                android:layout_marginStart="@dimen/_19pxh"
                android:layout_marginTop="@dimen/_112pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageHome"
                    android:layout_height="@dimen/_20pxh"
                    android:layout_marginTop="@dimen/_2pxv"
                    android:layout_width="@dimen/_30pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_home_black_900"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_home_black_900"/>
                <ImageView android:id="@+id/imageUser"
                    android:layout_height="@dimen/_21pxh"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginStart="@dimen/_225pxh"
                    android:layout_width="@dimen/_27pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_user"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_user"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</layout>
